<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/tittle_tv"
        style="@style/Widget.Tenderos.TextView.PrimaryTitle"
        android:layout_marginStart="48dp"
        android:layout_marginTop="80dp"
        android:gravity="left"
        android:text="@string/login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.Tenderos.Button.Primary"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psswd_tf" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_tf"
        style="@style/Widget.Tenderos.TextField.Primary"
        android:layout_marginTop="160dp"
        android:hint="@string/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tittle_tv"
            tools:layout_editor_absoluteX="-3dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/psswd_tf"
        style="@style/Widget.Tenderos.TextField.Primary"
        android:layout_marginTop="24dp"
        android:hint="@string/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_tf">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tittle_tv"
            tools:layout_editor_absoluteX="-3dp" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>